--- a/Project/pom.xml
+++ b/Project/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.3.RELEASE</version>
+		<version>2.1.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.302</groupId>
-	<artifactId>cloudDomus</artifactId>
+	<groupId>com.cloudDomus</groupId>
+	<artifactId>cloudDommus</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>cloudDomus</name>
+	<name>cloudDommus</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -27,9 +27,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -42,16 +43,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-                <dependency>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-hateoas</artifactId>
-                </dependency>
-                <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
-                <dependency>
-                    <groupId>org.mariadb.jdbc</groupId>
-                    <artifactId>mariadb-java-client</artifactId>
-                </dependency>
-        </dependencies>
+	</dependencies>
 
 	<build>
 		<plugins>
