--- a/pom.xml
+++ b/pom.xml
@@ -46,39 +46,47 @@
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
 		</dependency>
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.8.0</version>
 		</dependency>
 		<dependency>
                         <groupId>org.mockito</groupId>
                         <artifactId>mockito-core</artifactId>
+			<version>1.8.5</version>
                         <scope>test</scope>
                 </dependency>
 		<dependency>
 	 	        <groupId>org.hibernate.validator</groupId>
 	                <artifactId>hibernate-validator</artifactId>
+			<version>6.0.16.Final</version>
 	                <type>jar</type>
 	        </dependency>
 	        <dependency>
 	             <groupId>org.apache.commons</groupId>
 	             <artifactId>commons-lang3</artifactId>
+		     <version>3.8.1</version>
 	             <type>jar</type>
 	        </dependency>
 	        <dependency>
 	             <groupId>org.testng</groupId>
 	             <artifactId>testng</artifactId>
+		     <version>6.8.1</version>
 	             <scope>test</scope>
 	        </dependency>
 	        <dependency>
 	             <groupId>com.cloudDomus</groupId>
 	             <artifactId>cloudDommus</artifactId>
 	             <type>jar</type>
+		     <version>0.0.1-SNAPSHOT</version>
 	        </dependency>
                 <dependency>
                      <groupId>com.vaadin.external.google</groupId>
                      <artifactId>android-json</artifactId>
+		     <version>0.0.20131108.vaadin1</version>
                 </dependency>
 
 
